# iris-mail

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  iris-mail-spec.md
.github/workflows/: ci.yml
crates/iris-app/: Cargo.toml  tauri.conf.json
crates/iris-app/capabilities/: default.json
crates/iris-app/src/: events.rs  main.rs  setup.rs
crates/iris-app/src/commands/: accounts.rs  folders.rs  messages.rs  sync.rs
crates/iris-core/: Cargo.toml
crates/iris-core/src/: account.rs  attachment.rs  error.rs  folder.rs  lib.rs  message.rs  server.rs  sync_state.rs
crates/iris-db/: Cargo.toml
crates/iris-db/migrations/: 20260413000001_initial_schema.sql  20260414000001_add_server_config.sql  20260414000002_add_remote_id.sql
crates/iris-db/src/: error.rs  lib.rs
crates/iris-db/src/repo/: account.rs  attachment.rs  folder.rs  message.rs  message_body.rs  mod.rs
crates/iris-import/: Cargo.toml
crates/iris-import/src/: lib.rs  pst.rs
crates/iris-mail/: Cargo.toml
crates/iris-mail/src/: discovery.rs  lib.rs  smtp.rs
crates/iris-mail/src/graph/: client.rs  folders.rs  messages.rs  mod.rs  pagination.rs  types.rs
crates/iris-mail/src/imap/: client.rs  fetch.rs  folders.rs  idle.rs  mod.rs  sync.rs
crates/iris-mail/src/oauth/: gmail.rs  keychain.rs  m365.rs  mod.rs
crates/iris-search/: Cargo.toml
crates/iris-search/src/: executor.rs  lib.rs  parser.rs
crates/iris-sync/: Cargo.toml
crates/iris-sync/src/: engine.rs  lib.rs  outbox.rs
crates/iris-sync/src/jobs/: backfill.rs  idle.rs  initial.rs  mod.rs  tiering.rs
ui/: package-lock.json  package.json
ui/src/: app.css  app.html
ui/src/lib/api/: accounts.ts  folders.ts  messages.ts
ui/src/lib/components/: StatusBar.svelte
ui/src/lib/components/message-list/: MessageList.svelte  MessageRow.svelte
ui/src/lib/components/reading-pane/: ReadingPane.svelte
ui/src/lib/components/sidebar/: AddAccountDialog.svelte  FolderTree.svelte  Sidebar.svelte
ui/src/lib/stores/: accounts.svelte.ts  mail.svelte.ts  theme.svelte.ts
ui/src/routes/: +layout.svelte  +page.svelte
