[workspace]
resolver = "2"
members = [
    "crates/iris-core",
    "crates/iris-db",
    "crates/iris-mail",
    "crates/iris-search",
    "crates/iris-sync",
    "crates/iris-import",
    "crates/iris-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Michael Blake"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Woogy7/iris-mail"

[workspace.dependencies]
iris-core = { path = "crates/iris-core" }
iris-db = { path = "crates/iris-db" }
iris-mail = { path = "crates/iris-mail" }
iris-search = { path = "crates/iris-search" }
iris-sync = { path = "crates/iris-sync" }
iris-import = { path = "crates/iris-import" }

tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2", features = [] }
tauri-build = "2"
oauth2 = "5.0"
keyring = { version = "3", features = ["linux-native"] }
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5", default-features = false, features = ["runtime-tokio"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }
mail-parser = "0.9"
ammonia = "4"
html2text = "0.14"
hickory-resolver = { version = "0.25", features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
url = "2"
base64 = "0.22"
rand = "0.9"
open = "5"
sha2 = "0.10"
futures = "0.3"
