[package]
name = "iris-app"
description = "Tauri desktop shell for Iris Mail."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
iris-core.workspace = true
iris-db.workspace = true
iris-mail.workspace = true
tauri.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
