[package]
name = "iris-core"
description = "Domain types, errors, and traits for Iris Mail. No I/O, no dependencies on other Iris crates."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
serde_json.workspace = true
