[package]
name = "iris-import"
description = "PST and mbox import for Iris Mail."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iris-core.workspace = true
iris-db.workspace = true
thiserror.workspace = true
