[package]
name = "iris-mail"
description = "IMAP, SMTP, and OAuth protocol layer for Iris Mail."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iris-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
oauth2 = { workspace = true }
keyring = { workspace = true }
async-imap = { workspace = true }
async-native-tls = { workspace = true }
mail-parser = { workspace = true }
hickory-resolver = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
