[package]
name = "iris-sync"
description = "Sync engine, storage tiering, and background jobs for Iris Mail."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iris-core.workspace = true
iris-db.workspace = true
iris-mail.workspace = true
thiserror.workspace = true
